--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 * {
     box-sizing: border-box;
 }
+html {
+    scroll-behavior: smooth;
+}
 .header {
     border: 1px solid red;
 }
@@ -14,4 +17,13 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    list-style: none;
+  }
+  .nav-link {
+    padding: 0 20px;
+    line-height: 50px;
+    text-decoration: none;
+    transition: 0.3s;
+    color: darkred;
+    font: 26px Verdana, sans-serif;
   }
