--- a/style.css
+++ b/style.css
@@ -1,15 +1,34 @@
 * {
     box-sizing: border-box;
 }
+.left-side {
+    width: 50%;
+}
+.right-side {
+    width: 50%;
+}
 html {
     scroll-behavior: smooth;
 }
 .header {
     border: 1px solid red;
 }
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 0; 
+    padding: 0;
+}
 .main {
     border: 1px solid red;
 }
+.main-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .footer {
     border: 1px solid red;
 }
@@ -18,7 +37,7 @@ html {
     justify-content: space-around;
     align-items: center;
     list-style: none;
-  }
+}
   .nav-link {
     padding: 0 20px;
     line-height: 50px;
@@ -26,4 +45,4 @@ html {
     transition: 0.3s;
     color: darkred;
     font: 26px Verdana, sans-serif;
-  }
+}
