--- a/style.css
+++ b/style.css
@@ -1,6 +1,50 @@
 * {
     box-sizing: border-box;
 }
+html {
+    scroll-behavior: smooth;
+}
+.body {
+    min-height: 100vh;
+    display: grid;
+    overflow: auto;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 0 auto; 
+    padding: 20px; 
+    max-width: 1200px; 
+    box-sizing: border-box;
+}
+.header {
+    display: flex;
+    /*overflow: auto;*/
+    border-radius: 17px;
+    border: 4px solid rgb(255, 200, 237);
+}
+.nav-list {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    list-style: none;
+}
+.nav-link {
+    padding: 20px;
+    line-height: 50px;
+    text-decoration: none;
+    transition: 0.3s;
+    color: darkred;
+    font: 26px Verdana, sans-serif;
+}
+.main {
+    /*border: 4px solid rgb(255, 200, 237);*/
+    /*display: grid;*/
+    /*flex-direction: column;*/
+    /*overflow: auto;*/
+}
+.main-container {
+    display: flex;
+    flex-wrap: wrap;
+}
 .left-side {
     display: flex;
     width: 50%;
@@ -34,48 +78,6 @@
     border-top-right-radius: 17px;
     font: 18px Verdana, sans-serif;
 }
-html {
-    scroll-behavior: smooth;
-}
-.header {
-    border-radius: 17px;
-    border: 4px solid rgb(255, 200, 237);
-}
-.body {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin: 0 auto; 
-    padding: 20px; 
-    max-width: 1200px; 
-    box-sizing: border-box;
-}
-/*.main {
-    border: 4px solid rgb(255, 200, 237);
-}*/
-.main-container {
-    display: flex;
-    flex-wrap: wrap;
-}
-.nav-list {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    list-style: none;
-}
-.nav-link {
-    padding: 20px;
-    line-height: 50px;
-    text-decoration: none;
-    transition: 0.3s;
-    color: darkred;
-    font: 26px Verdana, sans-serif;
-}
-.right-section-title {
-    color: white;
-    padding: 15px 20px 5px;
-}
 .name-section-title{
     color: darkred;
     padding: 10px;
@@ -83,11 +85,21 @@ html {
     text-indent: 8px;
     /*line-height: 1.5;*/
 }
+.right-section-title {
+    color: white;
+    padding: 15px 20px 5px;
+}
 .about-me {
     font: 20px Arial, sans-serif;
     margin: 0px 20px 0px;
     color:darkred;
     text-indent: 40px;
+    line-height: 1.5;
+}
+.list {
+    font: 20px Arial, sans-serif;
+    padding-inline-start: 38px; 
+    color:darkred;
     line-height: 1.5;
 }
 .language-js {
@@ -98,12 +110,6 @@ html {
     margin: 10px 15px 10px;
     padding: 10px;
     text-align: left;
-}
-.list {
-    font: 20px Arial, sans-serif;
-    padding-inline-start: 38px; 
-    color:darkred;
-    line-height: 1.5;
 }
 .footer {
     display: flex;
