--- a/style.css
+++ b/style.css
@@ -16,8 +16,6 @@ html {
     box-sizing: border-box;
 }
 .header {
-    display: flex;
-    /*overflow: auto;*/
     border-radius: 17px;
     border: 4px solid rgb(255, 200, 237);
 }
@@ -35,12 +33,12 @@ html {
     color: darkred;
     font: 26px Verdana, sans-serif;
 }
-.main {
+/*.main {
     /*border: 4px solid rgb(255, 200, 237);*/
     /*display: grid;*/
     /*flex-direction: column;*/
-    /*overflow: auto;*/
-}
+    /*overflow: auto;
+}*/
 .main-container {
     display: flex;
     flex-wrap: wrap;
