feat: add animation for projects section

--- a/style.css
+++ b/style.css
@@ -128,8 +128,17 @@ html {
 }
 
 .project {
-  color: #8b0000;
-  text-decoration: none;
+  display: flex;
+  justify-content: center;
+}
+
+.preview-of-project {
+  transition: 0.3s;
+  border-radius: 10px;
+}
+
+.preview-of-project:hover {
+  transform: scale(1.3);
 }
 
 .footer {
